Footer.php - Global footer: Desktop version created

--- a/wp-content/themes/the_travel_kiwi/style.css
+++ b/wp-content/themes/the_travel_kiwi/style.css
@@ -752,6 +752,7 @@ object {
 
 /* SCSS Variables set */
 /* CUSTOM PART */
+/* GLOBAL MENU */
 .main-navigation {
   display: flex;
   flex-direction: row;
@@ -796,6 +797,49 @@ object {
     .main-navigation .menu-primary-container .menu-item a:hover {
       color: #e67e22;
       border-color: #e67e22; }
+
+/* GLOBAL FOOTER */
+.site-footer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 1em 15%;
+  background: #2c3e50;
+  position: relative;
+  width: 100%; }
+  .site-footer .site-logo {
+    width: 120px;
+    height: auto;
+    display: inline-block; }
+  .site-footer .splitter {
+    display: inline-block;
+    color: #ccc;
+    margin: 0 0.5em;
+    vertical-align: middle; }
+  .site-footer .footer-link {
+    font-family: OpenSansBold;
+    font-size: 0.85rem;
+    font-weight: normal;
+    text-transform: uppercase;
+    color: #fff;
+    text-decoration: none;
+    letter-spacing: 1px;
+    display: inline-block;
+    outline: 0;
+    background: #34495e;
+    padding: 0.5em 1.25em;
+    border-radius: 100px;
+    webkit-transition: all 0.25s ease-in-out;
+    -moz-transition: all 0.25s ease-in-out;
+    -o-transition: all 0.25s ease-in-out;
+    transition: all 0.25s ease-in-out; }
+  .site-footer .footer-link:hover {
+    background: #3498db; }
+  .site-footer .left-container-50p {
+    width: 30% !important; }
+  .site-footer .right-container-50p {
+    width: 70% !important; }
 
 /* GLOBAL CLASSES */
 .left-container-50p,
@@ -887,6 +931,62 @@ object {
 .hvr-wobble-vertical:hover, .hvr-wobble-vertical:focus, .hvr-wobble-vertical:active {
   -webkit-animation-name: hvr-wobble-vertical;
   animation-name: hvr-wobble-vertical;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-iteration-count: 1;
+  animation-iteration-count: 1; }
+
+/* Wobble Horizontal */
+@-webkit-keyframes hvr-wobble-horizontal {
+  16.65% {
+    -webkit-transform: translateX(8px);
+    transform: translateX(8px); }
+  33.3% {
+    -webkit-transform: translateX(-6px);
+    transform: translateX(-6px); }
+  49.95% {
+    -webkit-transform: translateX(4px);
+    transform: translateX(4px); }
+  66.6% {
+    -webkit-transform: translateX(-2px);
+    transform: translateX(-2px); }
+  83.25% {
+    -webkit-transform: translateX(1px);
+    transform: translateX(1px); }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0); } }
+@keyframes hvr-wobble-horizontal {
+  16.65% {
+    -webkit-transform: translateX(8px);
+    transform: translateX(8px); }
+  33.3% {
+    -webkit-transform: translateX(-6px);
+    transform: translateX(-6px); }
+  49.95% {
+    -webkit-transform: translateX(4px);
+    transform: translateX(4px); }
+  66.6% {
+    -webkit-transform: translateX(-2px);
+    transform: translateX(-2px); }
+  83.25% {
+    -webkit-transform: translateX(1px);
+    transform: translateX(1px); }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0); } }
+.hvr-wobble-horizontal {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent; }
+
+.hvr-wobble-horizontal:hover, .hvr-wobble-horizontal:focus, .hvr-wobble-horizontal:active {
+  -webkit-animation-name: hvr-wobble-horizontal;
+  animation-name: hvr-wobble-horizontal;
   -webkit-animation-duration: 1s;
   animation-duration: 1s;
   -webkit-animation-timing-function: ease-in-out;
