--- a/wp-content/themes/the_travel_kiwi/style.css
+++ b/wp-content/themes/the_travel_kiwi/style.css
@@ -765,7 +765,8 @@ object {
   top: 0;
   left: 0;
   width: 100%;
-  transform: translateZ(0); }
+  transform: translateZ(0);
+  z-index: 9999; }
   .main-navigation .site-logo-link {
     text-decoration: none !important;
     outline: 0 !important;
@@ -835,7 +836,7 @@ object {
     -o-transition: all 0.25s ease-in-out;
     transition: all 0.25s ease-in-out; }
   .site-footer .footer-link:hover {
-    background: #3498db; }
+    background: #e67e22; }
   .site-footer .left-container-50p {
     width: 30% !important; }
   .site-footer .right-container-50p {
@@ -878,8 +879,116 @@ object {
 
 .site-content {
   display: block;
-  margin: 3em 0;
+  margin: calc(2em + 48px) 0;
   padding: 0 15%; }
+
+/* MOBILE STYLES */
+.main-navigation.mobile {
+  padding: 1em 2em !important; }
+  .main-navigation.mobile #menu-controller {
+    display: inline-block;
+    vertical-align: middle;
+    background: #fff;
+    box-shadow: none;
+    padding: 0.5em;
+    font-weight: normal;
+    font-size: 1.25rem;
+    margin: 0 0.5em;
+    border-radius: 100%;
+    width: 48px;
+    height: 48px;
+    text-align: center;
+    outline: 0 !important;
+    webkit-transition: all 0.25s ease-in-out;
+    -moz-transition: all 0.25s ease-in-out;
+    -o-transition: all 0.25s ease-in-out;
+    transition: all 0.25s ease-in-out; }
+  .main-navigation.mobile #menu-controller:active,
+  .main-navigation.mobile #menu-controller:hover {
+    background: #eee; }
+  .main-navigation.mobile #login-form-controller {
+    display: inline-block;
+    vertical-align: middle;
+    background: #2ecc71;
+    box-shadow: none;
+    padding: 0.5em;
+    font-weight: normal;
+    font-size: 1.25rem;
+    margin: 0 0;
+    text-shadow: none;
+    color: #fff;
+    border: 0;
+    border-radius: 100%;
+    width: 48px;
+    height: 48px;
+    text-align: center;
+    outline: 0 !important;
+    webkit-transition: all 0.25s ease-in-out;
+    -moz-transition: all 0.25s ease-in-out;
+    -o-transition: all 0.25s ease-in-out;
+    transition: all 0.25s ease-in-out; }
+  .main-navigation.mobile #login-form-controller:active,
+  .main-navigation.mobile #login-form-controller:hover {
+    background: #27ae60; }
+
+#mobile-menu-holder {
+  display: block;
+  position: fixed;
+  top: calc(2em + 48px);
+  width: 100%;
+  height: calc(100% - 2em - 48px);
+  background: #fff;
+  padding: 1em 2em;
+  text-align: left;
+  z-index: 999;
+  transform: translateY(-200%);
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25); }
+  #mobile-menu-holder .menu {
+    display: block;
+    margin: 0;
+    padding: 0;
+    list-style: none; }
+    #mobile-menu-holder .menu .menu-item {
+      display: block;
+      text-align: left; }
+      #mobile-menu-holder .menu .menu-item a {
+        font-family: OpenSansBold;
+        font-size: 1.15rem;
+        font-weight: normal;
+        text-shadow: none;
+        display: block;
+        padding: 0.5em 00.25em;
+        color: #333;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        vertical-align: middle;
+        text-decoration: none;
+        border-bottom: 3px solid #ddd;
+        webkit-transition: all 0.25s ease-in-out;
+        -moz-transition: all 0.25s ease-in-out;
+        -o-transition: all 0.25s ease-in-out;
+        transition: all 0.25s ease-in-out; }
+      #mobile-menu-holder .menu .menu-item a:active,
+      #mobile-menu-holder .menu .menu-item a:hover {
+        border-color: #e67e22;
+        color: #e67e22; }
+
+.site-content.mobile {
+  padding: 0 2em; }
+
+.site-footer.mobile {
+  display: block !important; }
+  .site-footer.mobile .site-logo {
+    width: 140px; }
+  .site-footer.mobile .footer-link {
+    display: block; }
+  .site-footer.mobile .footer-link:first-of-type {
+    margin-top: 1em; }
+  .site-footer.mobile .left-container-50p,
+  .site-footer.mobile .right-container-50p {
+    display: block !important;
+    width: 100% !important;
+    text-align: center; }
 
 /* ANIMATIONS */
 /* Wobble Vertical */
