--- a/wp-content/themes/the_travel_kiwi/style.css
+++ b/wp-content/themes/the_travel_kiwi/style.css
@@ -902,7 +902,7 @@ object {
   .video-slider-homepage .video-container {
     display: block;
     min-width: 100%;
-    min-height: 2em;
+    height: 2em !important;
     font-size: 12rem;
     background: #000;
     width: auto;
