--- a/wp-content/themes/the_travel_kiwi/style.scss
+++ b/wp-content/themes/the_travel_kiwi/style.scss
@@ -1062,12 +1062,13 @@ $asbestos: #7f8c8d;
 .site-content {
 	display: block;
     margin: calc(2em + 48px) 0;
-    padding: 0 15%;
+    padding: 0;
 }
 
 .video-slider-homepage {
 	display: block;
 	width: 100%;
+	padding: 0 10%;
 
 	.play-button {
 		display: inline-block;
@@ -1087,12 +1088,13 @@ $asbestos: #7f8c8d;
 	.video-container {
 	    display: block;
 	    min-width: 100%;
-	    height: 2em !important;
+	    min-height: 2em;
 	    font-size: 12rem;
 	    background: #000;
 	    width: auto;
 	    height: auto;
 	    max-width: 100%;
+	    max-height: 614px;
 	}
 
 	.owl-nav { 
@@ -1127,13 +1129,120 @@ $asbestos: #7f8c8d;
 		    max-width: 50%;
 		}
 	}
-	.owl-prev { left: 0; }
-	.owl-next { right: 0; }
+	.owl-prev { left: 10%; }
+	.owl-next { right: 10%; }
 
 	.owl-prev:hover,
 	.owl-next:hover { background: rgba(255, 255, 255, 0.85); }	
 }
 .video-slider-homepage:hover .owl-nav { opacity: 1; }
+
+.page-text {
+	display: block;
+	padding: 0 10%;	
+    margin: 2em 0 4em;
+
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 { 
+		font-family: OpenSansRegular;
+		font-weight: normal;
+		letter-spacing: 1px;
+		color: $carrot;
+		margin: 1em 0 0.25em;
+	}
+
+	h1 { font-size: 2.5rem; }
+	h2 { font-size: 2rem; }
+	h3 { font-size: 1.75rem; }
+	h4 { font-size: 1.5rem; }
+	h5, h6 { font-size: 1.25rem; }
+
+	p {
+		font-family: LoraRegular;
+		font-weight: normal;
+		font-size: 1.25rem;
+
+		color: #333;
+
+		letter-spacing: 1px;
+		line-height: 175%;
+		text-shadow: none;
+	}
+}
+
+.places-holder {
+	display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0 5%;
+    margin: 2em 0 1em;
+
+    .place-anchor {
+	    display: inline-block;
+    	width: 33%;
+    	margin: 0 1em;
+    	color: #fff !important;
+    	text-decoration: none;
+    	outline: 0 !important;
+
+    	webkit-transition: all 0.35s ease-in-out;
+		-moz-transition: all 0.35s ease-in-out;
+		-o-transition: all 0.35s ease-in-out;
+		transition: all 0.35s ease-in-out;  
+
+    	.place-container {
+		    display: block;
+		    width: 100%;		    
+		    height: 450px;
+		    position: relative;
+		    background-size: cover;
+		    background-position: center;
+		    border-radius: 3px;
+
+			.country-name {
+			    font-family: OpenSansBold;
+			    font-weight: normal;
+			    font-size: 0.85rem;
+			    letter-spacing: 1px;
+			    text-transform: uppercase;
+			    position: absolute;
+			    top: 0;
+			    left: 0;
+			    margin: 0;
+			    padding: 0.5em;
+			}
+
+			.city-name {
+			    font-family: OpenSansLight;
+			    font-weight: normal;
+			    font-size: 2.25rem;
+			    letter-spacing: 1px;
+			    position: absolute;
+			    bottom: 0;
+			    margin: 1.25em 0;
+			    padding: 0 0.25em;
+			}
+
+		    .city-nick {
+		    	font-family: LoraRegular;
+			    font-weight: normal;
+			    letter-spacing: 1px;
+			    font-size: 1.25rem;
+			    position: absolute;
+			    bottom: 0;
+			    margin: 0;
+			    padding: 0.5em;
+			    display: block;
+		    }
+    	}
+    }
+
+    .place-anchor:hover { transform: translateY(10px); }
+}
 
 /* MOBILE STYLES */
 .main-navigation.mobile { 
