--- a/wp-content/themes/the_travel_kiwi/style.scss
+++ b/wp-content/themes/the_travel_kiwi/style.scss
@@ -1337,6 +1337,7 @@ $asbestos: #7f8c8d;
     z-index: 999;
     transform: translateY(-200%);
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25);
+	-webkit-overflow-scrolling: touch;
 
     .menu {
 	    display: block;
